edited register page

--- a/frontend/src/app/components/auth-layout/auth-layout.component.html
+++ b/frontend/src/app/components/auth-layout/auth-layout.component.html
@@ -1,13 +1,23 @@
 <div class="layout">
   <div class="left">
-    <div class="promo">
-      <h3>EventLife</h3>
+    <div class="left-content">
+      <h3 class="brand">EventLife</h3>
       <h1>Vivez des moments inoubliables.</h1>
-        <br> Rejoignez la plus grande communauté d'événementiel.<br>
-         Découvrez, réservez et partagez vos passions en un clic.
+      <p>
+        Rejoignez la plus grande communauté d'événementiel.
+        Découvrez, réservez et partagez vos passions en un clic.
+      </p>
     </div>
   </div>
+
   <div class="right">
-    <app-auth-form></app-auth-form>
+    <div class="right-content">
+      <h3>Créer un compte</h3>
+      <p class="subtitle">
+        Complétez vos informations pour une expérience personnalisée.
+      </p>
+
+      <app-auth-form></app-auth-form>
+    </div>
   </div>
 </div>
