--- a/frontend/src/app/components/auth-form/auth-form.component.html
+++ b/frontend/src/app/components/auth-form/auth-form.component.html
@@ -1,11 +1,41 @@
-<!-- form.component.html -->
-<form (ngSubmit)="submitForm()">
- 
-  <app-auth-input label="Adresse email" type="email" placeholder="exemple@email.com" [(value)]="user.email"></app-auth-input>
-  <app-auth-input label="Mot de passe" type="password" placeholder="********" [(value)]="user.password"></app-auth-input>
-    <app-auth-input label="Confirmer le mot de passe" type="password" placeholder="********" [(value)]="user.confirmPassword"></app-auth-input>
+<form class="auth-form" (ngSubmit)="submitForm()">
 
-  <app-interest-selector></app-interest-selector>
+  <div class="form-group">
+    <app-auth-input
+      label="Adresse email"
+      type="email"
+      placeholder="exemple@email.com"
+      [(value)]="user.email">
+    </app-auth-input>
+  </div>
 
-  <app-auth-button text="Créer mon compte" type="submit"></app-auth-button>
+  <div class="form-group">
+    <app-auth-input
+      label="Mot de passe"
+      type="password"
+      placeholder="********"
+      [(value)]="user.password">
+    </app-auth-input>
+  </div>
+
+  <div class="form-group">
+    <app-auth-input
+      label="Confirmer le mot de passe"
+      type="password"
+      placeholder="********"
+      [(value)]="user.confirmPassword">
+    </app-auth-input>
+  </div>
+
+  <div class="form-group">
+    <app-interest-selector></app-interest-selector>
+  </div>
+
+  <div class="form-actions">
+    <app-auth-button
+      text="Créer mon compte"
+      type="submit">
+    </app-auth-button>
+  </div>
+
 </form>
