--- a/frontend/src/app/features/reservation/components/validation-section/validation-section.component.html
+++ b/frontend/src/app/features/reservation/components/validation-section/validation-section.component.html
@@ -37,7 +37,7 @@
 
             <span class="text-sm text-gray-600 dark:text-gray-300 group-hover:text-primary transition-colors">
                 J'accepte les
-                <a class="font-bold underline decoration-1 underline-offset-2" href="#">
+                <a class="font-bold underline decoration-1 underline-offset-2" routerLink="#">
                     Conditions Générales de Vente
                 </a>
                 et la politique de confidentialité.
