--- a/frontend/src/app/features/reservation/pages/payment/payment.page.html
+++ b/frontend/src/app/features/reservation/pages/payment/payment.page.html
@@ -12,10 +12,10 @@
         <div class="grid grid-cols-1 lg:grid-cols-12 gap-8 items-start">
             <div class="lg:col-span-7 xl:col-span-8 flex flex-col gap-6">
                 <app-contact-form [triggerValidation]="triggerValidation()"
-                    (validationStatus)="onContactValidation($event)" />
+                    (validationStatus)="onContactValidation($event)" (formData)="onContactData($event)" />
 
                 <app-payment-form [triggerValidation]="triggerValidation()"
-                    (validationStatus)="onPaymentValidation($event)" />
+                    (validationStatus)="onPaymentValidation($event)" (formData)="onPaymentData($event)" />
 
                 <app-validation-section [amount]="totalAmount()" [isProcessing]="isProcessing()"
                     (submitPayment)="handlePayment()">
@@ -24,6 +24,7 @@
             </div>
 
             <div class="lg:col-span-4">
+                <app-timer />
                 <app-seat-cart-summary [selectedSeats]="selectedSeats()" [subtotal]="cartSubtotal()"
                     [serviceFee]="cartServiceFee()" [total]="cartTotal()" [readonly]="true" />
             </div>
