added scanner component

--- a/frontend/src/app/components/scan-history/scan-history.component.html
+++ b/frontend/src/app/components/scan-history/scan-history.component.html
@@ -22,7 +22,7 @@
       <!-- Summary Stats -->
       <app-scan-stats-summary
         [totalEvents]="eventStats.length"
-        [totalScans]="allScans.length"
+        [totalScans]="getTotalScans()"
         [uniqueTickets]="getTotalUniqueTickets()">
       </app-scan-stats-summary>
 
